rename some dirs and add Choreography.png